[gd_scene load_steps=9 format=1]

[ext_resource path="res://scripts/Enemy_Júpitar.gd" type="Script" id=1]
[ext_resource path="res://sprites/Planeta Júpitar/Enemy/Up/Enemy_U_1.png" type="Texture" id=2]
[ext_resource path="res://sprites/Planeta Júpitar/Enemy/Right/Enemy_R_1.png" type="Texture" id=3]
[ext_resource path="res://sprites/Planeta Júpitar/Enemy/Down/Enemy_D_1.png" type="Texture" id=4]
[ext_resource path="res://sprites/Planeta Júpitar/Enemy/Left/Enemy_L_1.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 15.5901, 13.0592 )

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Idle_U",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "Idle_R",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "Idle_D",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "Idle_L",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "Wlak_D",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "Wlak_L",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "Wlak_R",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "Wlak_U",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=3]

custom_solver_bias = 0.0
radius = 54.2024

[node name="Enemy_Júpitar" type="KinematicBody2D"]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, -0.387421, 12.7849 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]

transform/pos = Vector2( 17.0465, -6.58614 )
frames = SubResource( 2 )
animation = "Idle_U"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

transform/pos = Vector2( -0.387421, 12.7849 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="RayNodeUp" type="RayCast2D" parent="."]

transform/rot = 180.0
enabled = false
cast_to = Vector2( 0, 50 )
layer_mask = 1
type_mask = 15

[node name="RayNodeDown" type="RayCast2D" parent="."]

enabled = false
cast_to = Vector2( 0, 50 )
layer_mask = 1
type_mask = 15

[node name="RayNodeLeft" type="RayCast2D" parent="."]

transform/rot = -90.0
enabled = false
cast_to = Vector2( 0, 50 )
layer_mask = 1
type_mask = 15

[node name="RayNodeRight" type="RayCast2D" parent="."]

transform/rot = 90.0
enabled = false
cast_to = Vector2( 0, 50 )
layer_mask = 1
type_mask = 15

[node name="Area_Enemy_Júpitar" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area_Enemy_Júpitar"]

shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[connection signal="area_enter" from="Area_Enemy_Júpitar" to="." method="_on_Area_Enemy_Jpitar_area_enter"]


